reflection be gone (to an extent)